--- a/package.json
+++ b/package.json
@@ -2,24 +2,25 @@
   "name": "vibes-site",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
-    "framer-motion": "^11.0.0",
-    "marked": "^17.0.1",
+    "framer-motion": "^11.2.12",
+    "marked": "^13.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
-    "react-markdown": "^10.1.0",
-    "react-router-dom": "^7.9.6"
+    "react-markdown": "^9.0.1",
+    "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.0.0",
     "autoprefixer": "^10.4.0",
     "postcss": "^8.4.0",
     "tailwindcss": "^3.4.0",
-    "vite": "^7.2.4"
+    "vite": "^5.3.1"
   }
 }
